# gpupoor

./: .gitignore  README.md  pyproject.toml  run_accuracy_eval.py  run_benchmark.py
gpu_poor/: __init__.py
gpu_poor/kernels/: __init__.py  split_k_sequential.py
gpu_poor/kernels/matmul/: __init__.py  split_k_sequential.py
gpu_poor/modules/: __init__.py  lowp_linear.py  mlp.py
gpupoor/kernels/matmul/: __init__.py  cascaded.py  split_k_parallel.py  split_k_sequential.py
gpupoor/modules/: lowp_linear.py
tests/: matmul.py
