[project]
name = "gpupoor"
version = "0.1.0"
description = "For the poor GPU users."
authors = [{ name = "sekstini", email = "sekstinilol@gmail.com" }]
readme = "README.md"
license = { text = "MIT License" }

requires-python = ">= 3.10"
dependencies = ["torch>=2.2"]

[tool.setuptools]
packages = ["gpupoor"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
