[project]
name = "gpu_poor"
version = "0.2.0"
description = "Accelerated training/inference for the GPU-poor."
authors = [{ name = "sekstini", email = "sekstinilol@gmail.com" }]
readme = "README.md"
license = { text = "MIT License" }

requires-python = ">= 3.10"
dependencies = ["torch>=2.2"]

[tool.setuptools]
packages = ["gpu_poor"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
